--- a/jsonSerialization/jsonSerialization.csproj
+++ b/jsonSerialization/jsonSerialization.csproj
@@ -75,7 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Car.cs" />
-    <Compile Include="JsonSerialize.cs" />
+    <Compile Include="JsonSerial.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
